--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -123,7 +123,9 @@
                     Prof. Dr. Marcio Abondanza Vitiello pela cessão de imagem de seu banco de imagens pessoal. Nosso
                     agradecimento também é direcionado a André Fernando Araújo de Carvalho, pertencente à Equipe de
                     Desenvolvimento do TerraBrasilis, pelo
-                    suporte nas diversas etapas de estruturação do SisGEO, Obrigado! Esperamos que você desfrute desta
+                    suporte nas diversas etapas de estruturação do SisGEO, Obrigado!
+                </p>
+                <p>Esperamos que você desfrute desta
                     ferramenta
                     e - que ela possa lhe
                     auxiliar - na visualização e aquisição de dados espaciais para sua pesquisa!
@@ -332,7 +334,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6">
-                    <img src="../../assets/img/page/pessoa2.png" class="person rounded-circle" alt="">
+                    <img src="../../assets/img/page/guilherme.png" class="person rounded-circle" alt="">
                     <h5 class="font-weight-bold text-center mt-4 mb-3">Guilherme Vieira</h5>
                     <p class="text-blue text-center">Atuou no desenvolvimento e design do site de projetos, alterações
                         no código fonte da ferramenta e inserção de dados no Geoserver.
@@ -347,7 +349,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6">
-                    <img src="../../assets/img/page/pessoa4.png" class="person rounded-circle" alt="">
+                    <img src="../../assets/img/page/pagliares.png" class="person rounded-circle" alt="">
                     <h5 class="font-weight-bold text-center mt-4 mb-3">Rodrigo Martins Pagliares</h5>
                     <p class="text-blue text-center">Deu suporte na fase de configuração do certificado SSL.</p>
                 </div>
@@ -355,7 +357,7 @@
         </div>
     </div>
     <app-footer-page></app-footer-page>
-    <go-top-button [speed]="50000" [scrollDistance]="300" [classNames]="'className'" [styles]="goTopBtnStyle">
+    <go-top-button [speed]="50000" [scrollDistance]="150" [classNames]="'className'" [styles]="goTopBtnStyle">
         <i class="fa fa-arrow-up"></i>
     </go-top-button>
 </div>
