--- a/src/app/topografia/topografia.component.html
+++ b/src/app/topografia/topografia.component.html
@@ -76,9 +76,7 @@
                     <p>
                         - Arquivos matriciais das cartas topográficas da escala de 1:50.000 do Instituto Brasileiro de
                         Geografia e Estatística
-                        (IBGE), que recobrem a bacia hidrográfica do lago de Furnas, bem como modelo digital de elevação
-                        oriundo da Agência
-                        Espacial Norte-Americana, com resolução espacial de 90m. <br>
+                        (IBGE), que recobrem a bacia hidrográfica do lago de Furnas.<br>
                         - Buscaremos esforços para a contínua expansão de dados a respeito da topografia bacia
                         hidrográfica de Furnas.
                     </p>
@@ -98,7 +96,7 @@
         </div>
     </section>
     <app-footer-page></app-footer-page>
-    <go-top-button [speed]="50000" [scrollDistance]="300" [classNames]="'className'" [styles]="goTopBtnStyle">
+    <go-top-button [speed]="50000" [scrollDistance]="150" [classNames]="'className'" [styles]="goTopBtnStyle">
         <i class="fa fa-arrow-up"></i>
     </go-top-button>
 </div>
