--- a/src/assets/css/map/baselayer.css
+++ b/src/assets/css/map/baselayer.css
@@ -4,100 +4,112 @@
 
 /* Baselayers */
 .btnbaselayer {
-    position:absolute;
-    top:110px;
-    right:-5px;
-    transform:translate(-50%,-50%);
-    z-index: 999;
+  position: absolute;
+  top: 110px;
+  right: -5px;
+  transform: translate(-50%, -50%);
+  z-index: 999;
 }
 .baselayer {
-    width:50px;
-    height:50px;
-    background:var(--sidebar-second-color);
-    border-radius:5px;
-    box-sizing:border-box;
-    text-align:center;
-    box-shadow:0 2px 5px rgba(0,0,0,.2);
+  width: 50px;
+  height: 50px;
+  background: var(--sidebar-second-color);
+  border-radius: 5px;
+  box-sizing: border-box;
+  text-align: center;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 .baselayer:hover {
-    width:300px;
-    height:60px;
-    text-align:left;
-    padding:0 15px;
-    background:var(--sidebar-second-color);
-    transform:translateY(-50%);
-    transform:translateX(43%);
-    border-bottom-left-radius:0;
-    border-bottom-right-radius:0;
+  width: 300px;
+  height: 60px;
+  text-align: left;
+  padding: 0 15px;
+  background: var(--sidebar-second-color);
+  transform: translateY(-50%);
+  transform: translateX(43%);
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 .baselayer:hover .fa {
-    color:#fff;
+  color: #fff;
 }
+
+.baselayerTitle {
+  display: none;
+  position: absolute;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.1rem;
+  left: 40px;
+  bottom: 1px;
+  margin: 0;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.baselayer:hover .baselayerTitle {
+  display: block !important;
+}
+
 .baselayer i {
-    color:#fff;
-    line-height:60px;
-    font-size:35px;
-    margin-top: -5px !important;
+  color: #fff;
+  line-height: 60px;
+  font-size: 35px;
+  margin-top: -5px !important;
 }
 
 .baselayer ul {
-    position:absolute;
-    left:0;
-    top:50px;
-    margin:0;
-    width:100%;
-    background:#fff;
-    box-shadow:0 5px 15px rgba(0,0,0,.5);
-    padding:20px;
-    box-sizing:border-box;
-    border-bottom-left-radius:5px;
-    border-bottom-right-radius:5px;
-    display:none;
+  position: absolute;
+  left: 0;
+  top: 50px;
+  margin: 0;
+  width: 100%;
+  background: #fff;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  box-sizing: border-box;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  display: none;
 }
 .baselayer:hover ul {
-    display:block;
-	
+  display: block;
 }
 .baselayer ul li {
-    list-style:none;
-    border-bottom:1px solid rgba(0,0,0,.1);
-    padding:8px 0;
-    display:flex;
-	
+  list-style: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 8px 0;
+  display: flex;
 }
 .baselayer ul li:last-child {
-    border-bottom:none;
-	
+  border-bottom: none;
 }
 .baselayer ul li .icon {
-    width:24px;
-    height:24px; 
-    background:#ccc;
-    border-radius:50%;
-    text-align:center;
-    line-height:24px;
-    margin-right:15px;
-	
+  width: 24px;
+  height: 24px;
+  background: #ccc;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 24px;
+  margin-right: 15px;
 }
 .baselayer ul li .icon .fa {
-    color:#fff;
-    font-size:16px;
-    line-height:24px;
+  color: #fff;
+  font-size: 16px;
+  line-height: 24px;
 }
 .baselayer ul li .text {
-    position:relative;
-    font-family:sans-serif;
-    top:3px;
-    cursor:pointer;
+  position: relative;
+  font-family: sans-serif;
+  top: 3px;
+  cursor: pointer;
 }
 .baselayer ul li:hover .text {
-    font-weight:bold;
-    color: var(--sidebar-primary-color);
+  font-weight: bold;
+  color: var(--sidebar-primary-color);
 }
 
-
 /* fim */
-
 
 /* Radio */
 .custom-radios div {
@@ -111,7 +123,7 @@
   font-family: Arial, sans-serif;
   font-size: 14px;
 }
-.custom-radios input[type="radio"] + label span {
+.custom-radios input[type="radio"] + label .checkBtn {
   display: inline-block;
   width: 23px;
   height: 23px;
@@ -124,22 +136,19 @@
   text-align: center;
   line-height: 44px;
 }
-.custom-radios input[type="radio"] + label span img {
+.custom-radios input[type="radio"] + label .checkBtn img {
   opacity: 0;
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
-.custom-radios input[type="radio"] + label span {
+.custom-radios input[type="radio"] + label .checkBtn {
   background-color: #cccccc;
 }
 
-.custom-radios input[type="radio"]:checked + label span {
+.custom-radios input[type="radio"]:checked + label .checkBtn {
   opacity: 1;
-  background:url(../../img/map/check.svg) center center no-repeat;
+  background: url(../../img/map/check.svg) center center no-repeat;
   width: 23px;
   height: 23px;
   display: inline-block;
   background-color: var(--sidebar-primary-color);
 }
-
-
-
