- renomeia o ícone de .ico e altera sua referência do index do production, para /sisgeo-favicon.ico, retirando o /assets - corrige as urls de sobre e contato - remove referência a layer MDEHC

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -9,17 +9,17 @@
         <div class="collapse navbar-collapse flex-column" id="navbarSupportedContent">
             <ul class="navbar-nav navbar-right analises">
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" rel="noopener" style="cursor: pointer;" href="{{ sisgeoAboutUrl }}">
+                    <a class="nav-link" target="_blank" rel="noopener" style="cursor: pointer;" href="/#about">
                         {{ 'menu.about' | translate }}
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" rel="noopener" style="cursor: pointer;" href="{{ sisgeoContactUrl }}">
+                    <a class="nav-link" target="_blank" rel="noopener" style="cursor: pointer;" href="/#footer">
                         {{ 'menu.contact' | translate }}
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" rel="noopener" style="cursor: pointer;" href="{{ sisgeoHelpUrl }}">
+                    <a class="nav-link" target="_blank" rel="noopener" style="cursor: pointer;" href="/">
                         {{ 'menu.help' | translate }}
                     </a>
                 </li>
