Hover nas imagens de perfil

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -323,8 +323,22 @@
             </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6">
-                    <img src="../../assets/img/page/pessoa.png" class="person rounded-circle img-responsive"
-                        alt="Sample ">
+                    <div class="box">
+                        <img src="../../assets/img/page/pessoa.png" class="person rounded-circle img-responsive"
+                            alt="Sample ">
+                        <ul class="icon">
+                            <li>
+                                <a class="first" href="https://www.linkedin.com/in/sylvester-henrique/" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="second" href="https://github.com/SylvesterH13" target="_blank">
+                                    <i class="fa fa-github"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                     <h5 class="font-weight-bold text-center mt-4 mb-3">Sylvester Henrique</h5>
                     <p class="text-blue text-center">Implantação do sistema, design do site,
                         inserção de dados no banco e Geoserver,
@@ -334,7 +348,21 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6">
-                    <img src="../../assets/img/page/guilherme.png" class="person rounded-circle" alt="">
+                    <div class="box">
+                        <img src="../../assets/img/page/guilherme.png" class="person rounded-circle" alt="">
+                        <ul class="icon">
+                            <li>
+                                <a class="first" href="https://www.linkedin.com/in/guilherme-vieira-407659145/" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="second" href="https://github.com/gu1lh3rme" target="_blank">
+                                    <i class="fa fa-github"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                     <h5 class="font-weight-bold text-center mt-4 mb-3">Guilherme Vieira</h5>
                     <p class="text-blue text-center">Atuou no desenvolvimento e design do site de projetos, alterações
                         no código fonte da ferramenta e inserção de dados no Geoserver.
@@ -342,14 +370,44 @@
                 </div>
 
                 <div class="col-lg-3 col-md-6 mb-md-0 mb-5">
-                    <img src="../../assets/img/page/pessoa3.png" class="person rounded-circle" alt="">
+                    <div class="box">
+                        <img src="../../assets/img/page/pessoa3.png" class="person rounded-circle img-responsive"
+                            alt="Sample ">
+                        <ul class="icon">
+                            <li>
+                                <a class="first" href="#" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="second" href="#" target="_blank">
+                                    <i class="fa fa-link"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                     <h5 class="font-weight-bold text-center mt-4 mb-3">Marcelo de Oliveira Latuf</h5>
                     <p class="text-blue text-center">Coordenou ações na estruturação do SisGEO e na produção de dados.
                     </p>
                 </div>
 
                 <div class="col-lg-3 col-md-6">
-                    <img src="../../assets/img/page/pagliares.png" class="person rounded-circle" alt="">
+                    <div class="box">
+                        <img src="../../assets/img/page/pagliares.png" class="person rounded-circle img-responsive"
+                            alt="Sample ">
+                        <ul class="icon">
+                            <li>
+                                <a class="first" href="#" target="_blank">
+                                    <i class="fa fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="second" href="#" target="_blank">
+                                    <i class="fa fa-github"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                     <h5 class="font-weight-bold text-center mt-4 mb-3">Rodrigo Martins Pagliares</h5>
                     <p class="text-blue text-center">Deu suporte na fase de configuração do certificado SSL.</p>
                 </div>
