--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -283,46 +283,88 @@ header .container .btn:hover {
   font-family: Helvetica, Arial, sans-serif;
 }
 
-/*Footer*/
-.footerPage {
-  background-color: var(--blue-footer);
+.box {
+  position: relative;
+  width: 165px;
+  display: block;
+  height: 165px;
+  border-radius: 50%;
+  margin: 0 auto;
+  overflow: hidden;
+}
+.box:after {
+  content: "";
+  width: 165px;
+  height: 165px;
+  background: rgba(2, 162, 221, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: all 0.5s ease 0s;
+  border-radius: 50%;
+}
+.box:hover:after {
+  opacity: 1;
+}
+.box img {
+  transition: all 1.5s ease 0s;
+}
+.box .icon li a {
+  position: absolute;
+  transition: all 0.6s ease 0s;
+}
+.box:hover img {
+  transform: scale(1.2);
+}
+.box .icon {
+  width: 100%;
+  height: 100%;
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+.box .icon li a {
+  width: 45px;
+  height: 45px;
+  line-height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  top: 50%;
+  background-color: #fff;
+  border-radius: 50%;
+  opacity: 0;
 }
 
-.white-text {
+.box .icon .first {
+  left: 30px;
+}
+
+.box .icon .second {
+  right: 30px;
+}
+
+.box:hover .icon li a {
+  top: 35%;
+  opacity: 1;
+}
+.box .icon li a:hover {
+  background: #00d1ff;
+  border: none;
   color: #fff;
 }
 
-.footer-copyright {
-  padding-bottom: 25px;
-}
-
-.center-copyright {
-  display: flex;
-  justify-content: center;
-}
-
-.contact {
-  color: #ffffff9c;
-  padding-left: 0px;
-}
-
-.textGroup {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.textGroup h5,
-p {
-  color: var(--navbar-color);
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.counter {
-  margin-left: 0;
-}
-
-.logo {
-  height: 35px;
+@media only screen and (max-width: 990px) {
+  .box {
+    margin-bottom: 30px;
+  }
 }
