- adiciona sylvester.jpg - comprime imagens da equipe e muda pra .jpg

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -324,7 +324,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6">
                     <div class="box">
-                        <img src="../../assets/img/page/pessoa.png" class="person rounded-circle img-responsive"
+                        <img src="../../assets/img/page/sylvester.jpg" class="person rounded-circl img-responsive"
                             alt="Sample ">
                         <ul class="icon">
                             <li>
@@ -349,7 +349,7 @@
 
                 <div class="col-lg-3 col-md-6">
                     <div class="box">
-                        <img src="../../assets/img/page/guilherme.png" class="person rounded-circle" alt="">
+                        <img src="../../assets/img/page/guilherme.jpg" class="person rounded-circle" alt="">
                         <ul class="icon">
                             <li>
                                 <a class="first" href="https://www.linkedin.com/in/guilherme-vieira-407659145/" target="_blank">
@@ -393,7 +393,7 @@
 
                 <div class="col-lg-3 col-md-6">
                     <div class="box">
-                        <img src="../../assets/img/page/pagliares.png" class="person rounded-circle img-responsive"
+                        <img src="../../assets/img/page/pagliares.jpg" class="person rounded-circle img-responsive"
                             alt="Sample ">
                         <ul class="icon">
                             <li>
