Alterando responsividade no header e instalando pacote do font-awesome

--- a/src/app/footer-page/footer-page.component.html
+++ b/src/app/footer-page/footer-page.component.html
@@ -1,4 +1,4 @@
-<footer id="footer" class="footerPage">
+<footer id="contatos" class="footerPage">
     <div class="container">
         <div class="content-section-heading text-center">
             <h2 class="white-text mb-5 pt-4">Contatos</h2>
