--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
                     <a class="nav-link scroll" href="#technologies">Tecnologias</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link scroll" href="#team">Desenvolvedores</a>
+                    <a class="nav-link scroll" href="#team">Equipe</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link scroll" style="cursor: pointer;" (click)="scroll()">Contato</a>
