--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,6 +79,7 @@ mat-toolbar-row {
 @import '~assets/css/map/jquery.mCustomScrollbar.min.css';
 @import '~assets/css/map/mCS-sisgeo-theme.css';
 @import '~assets/css/jquery-scrolling/jquery.scrolling-tabs.min.css';
+@import '../node_modules/font-awesome/css/font-awesome.css';
 
 @font-face {
     font-family: 'icon';
