--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -58,7 +58,7 @@ header img {
 .heading {
   color: var(--navbar-color);
   font-family: "Patua One";
-  font-size: 4rem;
+  font-size: 9vh;
   font-weight: bold;
   line-height: 1.5rem;
   margin-bottom: 25px;
@@ -66,7 +66,7 @@ header img {
 
 header .container .btn {
   padding: 0.7rem 1.2rem;
-  font-size: 1.125rem;
+  font-size: 2.5vh;
   background-color: var(--navbar-color);
   color: #fff;
   border-radius: 0px;
@@ -98,22 +98,40 @@ header .container .btn:hover {
   }
 }
 
-@media (min-height: 900px) {
+@media (min-height: 900px) and (max-height: 999px) {
   header {
     padding-top: 10rem;
     padding-bottom: 2.5rem;
   }
 }
 
+@media (max-height: 568px) {
+  header {
+    padding-top: 5rem;
+  }
+}
+
+@media (min-height: 1000px) and (max-height: 1199px) {
+  header {
+    padding-top: 12rem;
+  }
+}
+
+@media (min-height: 1200px) {
+  header {
+    padding-top: 15rem;
+  }
+}
+
 @media (max-height: 680px) {
   header .container .btn {
-    margin-top: 0px !important;
+    margin-top: 13px !important;
   }
 }
 
 @media (max-height: 640px) {
   .subheading h4 {
-    padding-top: 0px !important;
+    padding-top: 5px !important;
   }
 }
 
