--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -88,7 +88,7 @@
             <div class="grid-stack" id="{{ 'grid-stack-' + project.id }}" attr.data-vision-id="{{project.id}}">
                 <div *ngFor="let layer of project.layers" class="grid-stack-item" id="{{ (layer.id | cleanWhiteSpace) + '_gslayer' }}" attr.data-layer-id="{{layer.id}}" data-gs-x="0" data-gs-y="{{ layer.uiOrder }}" data-gs-width="12" data-gs-height="1">
                     <div class="grid-stack-item-content">
-                        <ul class="list-unstyled components list h-100 layer-list">
+                        <ul *ngIf="project.loaded" class="list-unstyled components list h-100 layer-list">
                             <li>
                                 <a href="{{'#' + (layer.id | cleanWhiteSpace)}}" id="{{ (layer.id | cleanWhiteSpace) + '_gstoggle' }}" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle dropdown-layer">
                                     <dfn class="ferramenta-camada" attr.data-info="{{ 'tools.layerOptions' | translate }}">
