--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,12 +3,16 @@
     <header>
         <img src="../../assets/img/page/background-image.png" alt="">
         <div class="container">
-            <div class="heading">SisGEO</div>
-            <div class="subheading">
-                <h4>Sistema de compartilhamento de dados geoespaciais</h4>
+            <div class="row justify-content-center">
+                <h1 class="heading">SisGEO</h1>
             </div>
-            <a [routerLink]="['/webmap']" target="_blank" class="btn btn-primary">Acesse a
-                ferramenta</a>
+            <div class="row justify-content-center">
+                <h4 class="subheading">Sistema de compartilhamento de dados geoespaciais</h4>
+            </div>
+            <div class="row justify-content-center mt-4">
+                <a [routerLink]="['/webmap']" target="_blank" class="btn btn-primary">Acesse a
+                    ferramenta</a>
+            </div>
         </div>
     </header>
 
