--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -23,17 +23,17 @@ p {
 
 /* Navbar and Header */
 header {
-  height: 50vh;
-  padding-top: 7rem;
-  padding-bottom: 2rem;
-  margin-bottom: -25px;
-  text-align: center;
+  padding-top: 0;
+  display: flex;
+  align-items: center;
+  padding-bottom: 0;
+  height: 28rem;
   color: #fff;
 }
 
 header img {
   width: 100%;
-  height: 50vh;
+  height: inherit;
   opacity: 0.4;
   top: 0;
   object-fit: cover;
@@ -45,22 +45,23 @@ header img {
 .subheading {
   color: var(--navbar-color);
   font-family: "Patua One";
-  max-width: 30vh;
-  font-size: 2vh;
+  max-width: 15rem;
+  font-size: 1rem;
+  text-align: center;
 }
 
 .heading {
   color: var(--navbar-color);
   font-family: "Patua One";
-  font-size: 9vh;
+  font-size: 5rem;
   font-weight: normal;
   margin-bottom: 0;
   line-height: 1;
 }
 
 header .container .btn {
-  padding: 1.5vh 3.5vh;
-  font-size: 1.9vh;
+  padding: 0.9rem 1.75rem;
+  font-size: 1rem;
   background-color: var(--navbar-color);
   color: #fff;
   border-radius: 0px;
@@ -75,51 +76,6 @@ header .container .btn:hover {
   border-color: transparent;
   position: relative;
   z-index: 1;
-}
-
-@media (min-width: 768px) {
-  header {
-    padding-top: 7rem;
-    padding-bottom: 2.5rem;
-  }
-}
-
-@media (min-height: 800px) {
-  header {
-    padding-top: 9rem;
-    padding-bottom: 2.5rem;
-  }
-}
-
-@media (min-height: 900px) and (max-height: 999px) {
-  header {
-    padding-top: 10rem;
-    padding-bottom: 2.5rem;
-  }
-}
-
-@media (max-height: 568px) {
-  header {
-    padding-top: 5rem;
-  }
-}
-
-@media (min-height: 1000px) and (max-height: 1199px) {
-  header {
-    padding-top: 12rem;
-  }
-}
-
-@media (min-height: 1200px) {
-  header {
-    padding-top: 15rem;
-  }
-}
-
-@media (max-height: 680px) {
-  header .container .btn {
-    margin-top: 13px !important;
-  }
 }
 
 @media (max-height: 640px) {
