--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -2,7 +2,7 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
   background-color: var(--navbar-color);
-  height: 7.5vh;
+  height: 4rem;
 }
 
 .navbar-custom .navbar-brand {
@@ -13,8 +13,8 @@
 
 .navbar-custom .navbar-nav .nav-item .nav-link {
   font-family: "Patua One";
-  font-size: 2vh;
-  font-weight: 600;
+  font-size: 1.2rem;
+  font-weight: normal;
   letter-spacing: 1px;
   padding-right: 15px;
   color: #fffffff2 !important;
