Adicionando foto marcelo, removendo px dos parágrafos e ajustando click de contato no map.

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -14,7 +14,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" rel="noopener" style="cursor: pointer;" href="/#footer">
+                    <a class="nav-link" target="_blank" rel="noopener" style="cursor: pointer;" href="/#contacts">
                         {{ 'menu.contact' | translate }}
                     </a>
                 </li>
