--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -375,7 +375,7 @@
 
                 <div class="col-lg-3 col-md-6 mb-md-0 mb-5">
                     <div class="box">
-                        <img src="../../assets/img/page/pessoa3.png" class="person rounded-circle img-responsive"
+                        <img src="../../assets/img/page/marcelo.jpeg" class="person rounded-circle img-responsive"
                             alt="Sample ">
                         <ul class="icon">
                             <li>
