--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -148,11 +148,11 @@
             <div class="row">
                 <div class="col-md-4 mb-5 text-center">
                     <div class="card">
-                        <a [routerLink]="['/mapeamento']"><img class="project-img img-fluid card-img-top"
+                        <a (click)="goToProject('/mapeamento')"><img class="project-img img-fluid card-img-top"
                                 src="../../assets/img/page/mapeamento.png" alt=""></a>
                     </div>
                     <div class="bg-project">
-                        <a [routerLink]="['/mapeamento']">
+                        <a (click)="goToProject('/mapeamento')">
                             <h4 class="text-blue mb-2">Mapeamento do Lago de Furnas</h4>
                         </a>
                         <p class="text-muted mb-0">Monitoramento da área do espelho d' água e volume útil por imagens de
@@ -162,11 +162,11 @@
                 </div>
                 <div class="col-md-4 mb-5 text-center">
                     <div class="card">
-                        <a [routerLink]="['/bacia']"><img class="project-img img-fluid card-img-top"
+                        <a (click)="goToProject('/bacia')"><img class="project-img img-fluid card-img-top"
                                 src="../../assets/img/page/bacia.png" alt=""></a>
                     </div>
                     <div class="bg-project">
-                        <a [routerLink]="['/bacia']">
+                        <a (click)="goToProject('/bacia')">
                             <h4 class="text-blue mb-2">Bacia Hidrográfica de Furnas</h4>
                         </a>
                         <p class="text-muted mb-0">Repositório de dados cartográficos da bacia hidrográfica de Furnas
@@ -175,11 +175,11 @@
                 </div>
                 <div class="col-md-4 mb-5 text-center">
                     <div class="card">
-                        <a [routerLink]="['/topografia']"><img class="project-img img-fluid card-img-top"
+                        <a (click)="goToProject('/topografia')"><img class="project-img img-fluid card-img-top"
                                 src="../../assets/img/page/projeto-topografia.png" alt=""></a>
                     </div>
                     <div class="bg-project">
-                        <a [routerLink]="['/topografia']">
+                        <a (click)="goToProject('/topografia')">
                             <h4 class="text-blue mb-2">Topografia de Furnas</h4>
                         </a>
                         <p class="text-muted mb-0">Repositório de dados topográficos da bacia hidrográfica de Furnas</p>
@@ -356,7 +356,7 @@
                         <img src="../../assets/img/page/guilherme.jpg" class="person rounded-circle" alt="">
                         <ul class="icon">
                             <li>
-                                <a class="first" href="https://www.linkedin.com/in/guilherme-vieira-407659145/" target="_blank">
+                                <a class="first" href="https://www.linkedin.com/in/gu1lh3rmesv" target="_blank">
                                     <i class="fa fa-linkedin"></i>
                                 </a>
                             </li>
@@ -379,12 +379,12 @@
                             alt="Sample ">
                         <ul class="icon">
                             <li>
-                                <a class="first" href="#" target="_blank">
-                                    <i class="fa fa-linkedin"></i>
+                                <a class="first" href="http://lattes.cnpq.br/5292636043289795" target="_blank">
+                                    <i class="fa fa-university"></i>
                                 </a>
                             </li>
                             <li>
-                                <a class="second" href="#" target="_blank">
+                                <a class="second" href="http://lattes.cnpq.br/5292636043289795" target="_blank">
                                     <i class="fa fa-link"></i>
                                 </a>
                             </li>
@@ -401,13 +401,13 @@
                             alt="Sample ">
                         <ul class="icon">
                             <li>
-                                <a class="first" href="#" target="_blank">
-                                    <i class="fa fa-linkedin"></i>
+                                <a class="first" href="https://www.bcc.unifal-mg.edu.br/portal/pessoas/docentes/prof-rodrigo-martins-pagliares/" target="_blank">
+                                    <i class="fa fa-university"></i>
                                 </a>
                             </li>
                             <li>
-                                <a class="second" href="#" target="_blank">
-                                    <i class="fa fa-github"></i>
+                                <a class="second" href="http://lattes.cnpq.br/1194178136211401" target="_blank">
+                                    <i class="fa fa-link"></i>
                                 </a>
                             </li>
                         </ul>
