--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,6 +16,9 @@
                     <a class="nav-link scroll" href="#technologies">Tecnologias</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link scroll" href="#partners">Parceiros</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link scroll" href="#team">Equipe</a>
                 </li>
                 <li class="nav-item">
