Arrumando scroll para voltar ao topo nos projetos e na volta à home.

--- a/src/app/mapeamento/home/mapeamento.component.html
+++ b/src/app/mapeamento/home/mapeamento.component.html
@@ -105,7 +105,7 @@
     </div>
   </section>
   <app-footer-page></app-footer-page>
-  <go-top-button [speed]="50000" [scrollDistance]="150" [classNames]="'className'" [styles]="goTopBtnStyle">
+  <go-top-button [speed]="50000" [scrollDistance]="150" [classNames]="'className'" >
     <i class="fa fa-arrow-up"></i>
   </go-top-button>
 </div>
