- corrige lógica de ordenação das layers, para quando carregado no firefox - adiciona tradução para texto de carregamento do mapa - adiciona tradução para o conteúdo do modal de download - adiciona traduçaõ para o conteúdo do modal de metadados - remove algumas strings de tradução que não estão sendo utilizadas

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,5 +1,7 @@
 <ngx-spinner type="square-spin" bdColor = "rgba(0,0,0,0.4)" color="rgba(37,144,195,0.65)" size="large">
-    <p class="loading-text">Carregando...</p>
+    <p class="loading-text">
+        {{ 'map.loading' | translate }}
+    </p>
 </ngx-spinner>
 <!-- navbar -->
 <div id="content">
