--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,19 +7,21 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link scroll" href="#about">Sobre</a>
+                    <!-- <a class="nav-link scroll" href="#about">Sobre</a> -->
+                    <a class="nav-link scroll" [routerLink]="['/']" fragment="about" (click)="goToSection(about)">Sobre</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link scroll" href="#projects">Projetos</a>
+                    <!-- <a class="nav-link scroll" href="#projects">Projetos</a> -->
+                    <a class="nav-link scroll" [routerLink]="['/']" fragment="projects" (click)="goToSection(projects)">Projetos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link scroll" href="#technologies">Tecnologias</a>
+                    <a class="nav-link scroll" [routerLink]="['/']" fragment="technologies" (click)="goToSection(technologies)">Tecnologias</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link scroll" href="#partners">Parceiros</a>
+                    <a class="nav-link scroll" [routerLink]="['/']" fragment="partners" (click)="goToSection(partners)">Parceiros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link scroll" href="#team">Equipe</a>
+                    <a class="nav-link scroll" [routerLink]="['/']" fragment="team" (click)="goToSection(team)">Equipe</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link scroll" style="cursor: pointer;" (click)="scroll()">Contatos</a>
