Removendo erros de console, abrindo webmap em outra aba e outros ajustes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
                 <h4 class="subheading">Sistema de compartilhamento de dados geoespaciais</h4>
             </div>
             <div class="row justify-content-center mt-4">
-                <a [routerLink]="['/webmap']" class="btn btn-primary">Acesse a
+                <a [routerLink]="['/webmap']" target="_blank" class="btn btn-primary">Acesse a
                     ferramenta</a>
             </div>
         </div>
