--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,9 +78,9 @@ mat-toolbar-row {
 @import '~assets/css/gridstack/gridstack-extra.css';
 // @import '~assets/css/map/baselayer.css';
 // @import '~assets/css/map/estilo.css';
-@import '~assets/css/map/jquery.mCustomScrollbar.min.css';
+/* @import '~assets/css/map/jquery.mCustomScrollbar.min.css';
 @import '~assets/css/map/mCS-sisgeo-theme.css';
-@import '~assets/css/jquery-scrolling/jquery.scrolling-tabs.min.css';
+@import '~assets/css/jquery-scrolling/jquery.scrolling-tabs.min.css'; */
 
 @font-face {
     font-family: 'icon';
