Removendo referência estações fluviométricas e adicionando manual no link ajuda

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,7 +27,7 @@
                         <p>O portal SisGEO é uma plataforma web desenvolvida pela Universidade Federal de
                             Alfenas(UNIFAL-MG)
                             em parceria com o INPE para acesso, consulta, análise e disseminação de dados geográficos
-                            gerados elos
+                            gerados pelos
                             projetos de monitoramento do Lago de Furnas. Através do SisGeo qualquer pessoa pode acessar
                             os
                             mapas e
