--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -21,7 +21,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" target="_blank" rel="noopener" style="cursor: pointer;" href="/">
+                    <a class="nav-link" target="_blank" rel="noopener" style="cursor: pointer;" href="../../assets/Manual do Usuário - SisGEO v1.0.pdf">
                         {{ 'menu.help' | translate }}
                     </a>
                 </li>
