últimos ajustes Marcelo

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,15 +24,13 @@
             <div class="row">
                 <div class="col-md-6 initial">
                     <div class="paragraph text-lg-left">
-                        <p>O portal SisGEO é uma plataforma web desenvolvida pela Universidade Federal de
-                            Alfenas(UNIFAL-MG)
-                            em parceria com o INPE para acesso, consulta, análise e disseminação de dados geográficos
-                            gerados pelos
-                            projetos de monitoramento do Lago de Furnas. Através do SisGeo qualquer pessoa pode acessar
-                            os
-                            mapas e
-                            realizar
-                            análises sobre os dados diretamente do portal, sem necessitar de ferramentas específicas.
+                        <p>O portal SisGEO (Sistema de Compartilhamento de Dados Geoespaciais) é uma plataforma web desenvolvida pela 
+                            Universidade Federal de Alfenas (UNIFAL-MG) em parceria com o Instituto Nacional de
+                            Pesquisas Espaciais (INPE) para acesso, consulta, análise e disseminação de dados geográficos gerados pelos 
+                            projetos de pesquisa sobre o Lago de Furnas e sua bacia hidrográfica. Através do SisGEO a sociedade poderá
+                            ter acesso aos dados das pesquisas realizadas pelo Grupo de Pesquisa em Geodinâmica de 
+                            Bacias Hidrográficas (GeoHidro) e demais colaboradores e realizar análises sobre os dados diretamente do 
+                            portal, sem necessitar de ferramentas específicas.
                         </p>
                     </div>
                 </div>
@@ -106,8 +104,8 @@
                     de
                     dados
                     espaciais, seguindo padrões internacionais de dados espaciais
-                    definidos pela Open Geospatial
-                    Consortium (OGC). Ressalta-se que toda a estrutura do sistema está embasada em tecnologia de
+                    definidos pela <i>Open Geospatial
+                    Consortium</i> (OGC). Ressalta-se que toda a estrutura do sistema está embasada em tecnologia de
                     software
                     livre, o
                     que reduz custos com
