--- a/src/app/topografia/topografia.component.html
+++ b/src/app/topografia/topografia.component.html
@@ -15,8 +15,7 @@
                             Objetiva-se com este projeto o compartilhamento de cartas topográficas digitais registradas,
                             na escala de 1:50.000, oriundas do
                             mapeamento sistemático nacional, tendo o recobrimento territorial da bacia hidrográfica do
-                            lago de Furnas, bem como produto
-                            topográfico do programa SRTM da Agência Espacial Norte-Americana (NASA).</p>
+                            lago de Furnas.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -32,8 +31,8 @@
                     de controle distribuídos ao longo das 101 cartas topográficas que recobrem a bacia. O erro máximo
                     admissível para cada ponto foi de
                     15m, adotando-se a metodologia da Diretoria de Serviço Geográfico do Exército de 0,3mm da escala da
-                    carta. Em breve serão
-                    disponibilizados a Raiz do Erro Médio Quadrático (RMSE) de todas as cartas topográficas.
+                    carta. Os ajustes obtidos da Raiz do Erro Médio Quadrático (RMSE), encontram-se nos metadados das
+                    cartas topográficas.
                 </p>
             </div>
             <div class="row text-lg-left mb-4">
@@ -66,7 +65,7 @@
                     <p>
                         1 Estágio voluntário no Laboratório de Cartografia (semestres letivos: 2017.1 e 2019.1).<br>
                         2 Monitor das disciplinas de Cartografia Básica (semestre letivo: 2017.1).<br>
-                        3 Bolsista FAPEMIG de iniciação científica entre 2015 e 2016.
+                        3 Bolsista FAPEMIG de iniciação científica entre 2016 e 2017.
                     </p>
                 </div>
             </div>
