--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -24,6 +24,9 @@
                     <a class="nav-link scroll" [routerLink]="['/']" fragment="team" (click)="goToSection('team')">Equipe</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link scroll" [routerLink]="['/']" fragment="publications" (click)="goToSection(publications)">Publicações</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link scroll" style="cursor: pointer;" (click)="scroll()">Contatos</a>
                 </li>
             </ul>
