adicionando seção de publicações

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -336,3 +336,8 @@ header .container .btn:hover {
     margin-bottom: 30px;
   }
 }
+
+.publications {
+  padding-bottom: 3rem;
+  background: #e5e8eb;
+} 
