--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -418,6 +418,21 @@
             </div>
         </div>
     </div>
+
+    <div id="publications" class="publications">
+        <div class="container">
+            <div class="content-div-heading text-center">
+                <h2 class="text-blue mb-5">Publicações</h2>
+            </div>
+            <div class="row paragraph">
+                <div class="col">
+                    <p>CAMPOS, L. B.; LATUF, M. O. Base cartográfica digital da bacia hidrográfica do Lago de Furnas. In: PEREZ FILHO, A.; AMORIM, R. R.. (Org.). 
+                        Os Desafios da Geografia Física na Fronteira do Conhecimento. 1ed. Campinas: INSTITUTO DE GEOCIÊNCIAS - UNICAMP, v. 1, p. 5732-5736, 2017.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <app-footer-page></app-footer-page>
     <go-top-button [speed]="50000" [scrollDistance]="150" [classNames]="'className'" [styles]="goTopBtnStyle">
         <i class="fa fa-arrow-up"></i>
