--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -426,13 +426,45 @@
             </div>
             <div class="row paragraph">
                 <div class="col">
+                    <h4 class="text-blue">Artigo referência da plataforma SisGEO</h4>
+                    <p>ALVARENGA, S. H.; VIEIRA, G. S.; LATUF, M. O.; PAGLIARES, R. M. <span class="font-weight-bold">Sistema de compartilhamento de dados geoespaciais: SisGEO.</span> 
+                        Caderno de Geografia, v.32, n.69, p.443-455, 2022. 
+                        <a href="http://periodicos.pucminas.br/index.php/geografia/article/view/27312" target="_blank" class="link-publication">
+                            Acesse aqui</a>.
+                    </p>
+                </div>
+            </div>
+            <br />
+            <div class="row paragraph">
+                <div class="col">
+                    <h4 class="text-blue">Demais Publicações</h4>
+                    <h5 class="text-blue">Base de dados topográfica da bacia de Furnas</h5>
                     <p>CAMPOS, L. B.; LATUF, M. O. Base cartográfica digital da bacia hidrográfica do Lago de Furnas. In: PEREZ FILHO, A.; AMORIM, R. R.. (Org.). 
-                        Os Desafios da Geografia Física na Fronteira do Conhecimento. 1ed. Campinas: INSTITUTO DE GEOCIÊNCIAS - UNICAMP, v. 1, p. 5732-5736, 2017.</p>
+                        <span class="font-weight-bold">Os Desafios da Geografia Física na Fronteira do Conhecimento.</span> 1ed. Campinas: INSTITUTO DE GEOCIÊNCIAS - UNICAMP, v. 1, p. 5732-5736, 2017.
+                        <a href="https://ocs.ige.unicamp.br/ojs/sbgfa/article/view/2275" target="_blank" class="link-publication">
+                            Acesse aqui</a>.
+                    </p>
+                    <h5 class="text-blue">Mapeamento do reservatório de Furnas</h5>
+                    <p>
+                        Artigo em processo final de avaliação.
+                    </p>
+                </div>
+            </div>
+            <br />
+            <div class="row paragraph">
+                <div class="col">
+                    <h4 class="text-blue">Política de compartilhamento de dados</h4>
+                    <p>O SisGEO possui por objetivo o compartilhamento de dados geoespaciais produzidos pelo curso de Geografia da Universidade Federal de Alfenas (UNIFAL-MG), 
+                        a partir de Trabalhos de Conclusão de Curso (nível graduação) e pelo Programa de Pós-Graduação em Geografia (PPGEO/UNIFAL-MG). Os dados a serem inseridos 
+                        na plataforma SisGEO passarão por avaliação preliminar de viabilidade, bem como necessitarão de já terem sido publicados em algum periódico indexado, 
+                        exceto no que tange ao repositório de dados acerca da bacia hidrográfica de Furnas, que será formado pela junção de variadas camadas advindas de múltiplas 
+                        bases cartográficas. A Equipe SisGEO não se responsabiliza pelo uso dos dados, cabendo diretamente a seus autores.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
-    
+
     <app-footer-page></app-footer-page>
     <go-top-button [speed]="50000" [scrollDistance]="150" [classNames]="'className'" [styles]="goTopBtnStyle">
         <i class="fa fa-arrow-up"></i>
