--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -427,8 +427,8 @@
             <div class="row paragraph">
                 <div class="col">
                     <h4 class="text-blue">Artigo referência da plataforma SisGEO</h4>
-                    <p>ALVARENGA, S. H.; VIEIRA, G. S.; LATUF, M. O.; PAGLIARES, R. M. <span class="font-weight-bold">Sistema de compartilhamento de dados geoespaciais: SisGEO.</span> 
-                        Caderno de Geografia, v.32, n.69, p.443-455, 2022. 
+                    <p>ALVARENGA, S. H.; VIEIRA, G. S.; LATUF, M. O.; PAGLIARES, R. M. Sistema de compartilhamento de dados geoespaciais: SisGEO.
+                        <span class="font-weight-bold">Caderno de Geografia</span>, v.32, n.69, p.443-455, 2022. 
                         <a href="http://periodicos.pucminas.br/index.php/geografia/article/view/27312" target="_blank" class="link-publication">
                             Acesse aqui</a>.
                     </p>
