Feat(SISGEO-1):(ALteração de textos na página de Home)

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -651,13 +651,13 @@
             Os dados a serem inseridos na plataforma SisGEO passarão por
             avaliação preliminar de viabilidade, bem como necessitarão de já
             terem sido publicados em algum periódico indexado ou estarem em
-            processo de análise. Destaca-se a <b>obrigatoriedade</b> de citação da
-            plataforma SisGEO como fonte de disponibilização dos dados no texto
-            do artigo. A exceção a esta política reside no repositório de dados
-            acerca da bacia hidrográfica de Furnas, que será formado pela junção
-            de variadas camadas advindas de múltiplas bases cartográficas. A
-            Equipe SisGEO não se responsabiliza pelo uso dos dados
-            compartilhados pela plataforma.
+            processo de análise. Destaca-se a <b>obrigatoriedade</b> de citação
+            da plataforma SisGEO como fonte de disponibilização dos dados no
+            texto do artigo. A exceção a esta política reside no repositório de
+            dados acerca da bacia hidrográfica de Furnas, que será formado pela
+            junção de variadas camadas advindas de múltiplas bases
+            cartográficas. A Equipe SisGEO não se responsabiliza pelo uso dos
+            dados compartilhados pela plataforma.
           </p>
         </div>
       </div>
